# SEBI_Parser

./: DocumentExtractor.py  sebi.py
SEBI_Parser/: .gitignore  pyproject.toml  requirements.txt
SEBI_Parser/sebi_parser/: cli.py  sebi.py
SEBI_Parser/sebi_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
