[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sebi-parser"
version = "0.1.0"
description = "SEBI PDF parser and summarizer"
authors = [
  { name="Devam Kumar", email="devamkumar758@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "spacy",
  "transformers",
  "torch",
  "pymupdf",
  "requests"
]

[tool.setuptools.packages.find]
where = ["."]
