[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sebi-parser"
version = "0.1.0"
description = "SEBI PDF parser and summarizer"
authors = [
  { name="Devam Kumar", email="devamkumar758@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "spacy>=3.7.0",
  "transformers",
  "torch",
  "pymupdf",
  "requests",
  "beautifulsoup4"
]

[tool.setuptools.packages.find]
where = ["."]
